# subconscious-python

./: .gitignore  LICENSE  MANIFEST.in  MIGRATION.md  README.md  publish_package.sh  pyproject.toml  ruff.toml
.cursor/skills/sdk-migration/: SKILL.md
.github/workflows/: publish.yml  test.yml
scripts/: gen-schemas.sh
subconscious/: README.md  __init__.py  __main__.py  _capabilities.py  _normalize_tools.py  client.py  content.py  errors.py  grammar.py  tim_api.py  tim_pydantic.py  tools.py  traces.py  types.py
subconscious/_schemas/: __init__.py  attachment.py  chat_message.py  content_block.py  create_attachment_request.py  create_attachment_response.py  tool.py
subconscious/backends/: __init__.py  composite.py  e2b.py  filesystem.py  local_shell.py  memory.py  protocol.py  sandbox.py
subconscious/dev/: __init__.py  mcp_proxy.py  server.py  tunnel.py
tests/: test_backends.py  test_builders.py  test_content.py  test_normalize_tools.py  test_polling.py  test_run_options.py  test_run_split.py  test_stream_events.py  test_tool_response.py  test_traces.py  test_types.py
tests/e2e/: test_multimodal.py
