[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subconscious-python"
version = "0.1.22"
description = "Python SDK for Subconscious AI agent framework"
readme = "README.md"
authors = [
    {name = "Subconscious Systems", email = "hongyin@subconscious.dev"}
]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agent", "framework", "structured-output", "reasoning"]

dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.25.0",
    "pyhumps>=3.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://subconscious.dev"
Documentation = "https://docs.subconscious.dev"
Repository = "https://github.com/subconscious-systems/TIMRUN"
Issues = "https://github.com/subconscious-systems/TIMRUN/issues"

[tool.setuptools.packages.find]
include = ["subconscious*"]

[tool.setuptools.package-data]
subconscious = ["*.md"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

