[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subconscious-sdk"
version = "1.0.0"
description = "The official Python SDK for the Subconscious API"
readme = "README.md"
authors = [
    {name = "Hongyin Luo", email = "hongyin@subconscious.dev"},
    {name = "Jack O'Brien", email = "jack@subconscious.dev"}
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agent", "api", "sdk", "subconscious"]

dependencies = [
    "requests>=2.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://subconscious.dev"
Documentation = "https://docs.subconscious.dev"
Repository = "https://github.com/subconscious-systems/subconscious-python"
Issues = "https://github.com/subconscious-systems/subconscious-python/issues"

[tool.setuptools.packages.find]
include = ["subconscious*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
